[package]
name = "torrentrs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
bendy = "0.3.3"
rand = "0.8.5"
reqwest = { version = "0.12.4", features = ["blocking"] }
serde = {version = "1.0.204", features = ["derive"]}
serde_json = "1.0.120"
sha1 = "0.10.6"
tokio = { version = "1.38.0", features = ["full"] }
urlencoding = "2.1.3"
walkdir = "2.5.0"
